--- a/camerademo.html
+++ b/camerademo.html
@@ -101,8 +101,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 60%;
-  aspect-ratio: 4 / 3;
+ width: 300px;
+  height: 300px;
+  
   overflow: hidden;
   pointer-events: none; /* ガイド枠がクリックを妨げないようにする */
 }
