--- a/gameover.html
+++ b/gameover.html
@@ -14,7 +14,9 @@
     </style>
   </head>
   <body>
-   
+    <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4">
+      MUCHU Instagram >>
+    </a>
     <img src="ゲームオーバー子供.png" alt="Game over" />
     
   </body>
