--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=390px, initial-scale=1.0" />
+    <meta name="viewport" content="width=390, initial-scale=1.0" />
     <title>MUCHU2024　榎並ゼミ</title>
     <style>
       * {
