--- a/clear.html
+++ b/clear.html
@@ -42,7 +42,8 @@
     <a href="https://www.instagram.com/muchu_mukogawa?igsh=cWNxNHUwMHppazF4">
       MUCHU Instagram >>
     </a>
-    <img src="ゲーム成功大人.png" alt="Game Clear!" />
+    
+    <img src="ゲーム成功大人.png" alt="10/12 Game Clear!" />
     
     <!-- <p>gameclear!</p> -->
   </body>
