--- a/clear.html
+++ b/clear.html
@@ -43,7 +43,7 @@
       MUCHU Instagram >>
     </a>
     
-    <img src="ゲーム成功大人.png" alt="10/12 Game Clear!" />
+    <img src="ゲーム成功二日目.png" alt="10/12 Game Clear!" />
     
     <!-- <p>gameclear!</p> -->
   </body>
